Corrige nets não roteadas

--- a/Project Outputs for LTM-2405/Design Rule Check - LTM-2405.html
+++ b/Project Outputs for LTM-2405/Design Rule Check - LTM-2405.html
@@ -211,7 +211,7 @@
 	</script><title>Design Rule Verification Report</title>
 </head>
 <body onload=""><img ALT="Altium" src="
-			file://C:\Users\Public\Documents\Altium\AD18\Templates\AD_logo.png
+			file://C:\Users\Public\Documents\Altium\NEXUS\Templates\AD_logo.png
 		"><h1>Design Rule Verification Report</h1>
 <table class="header_holder">
 <td class="column1">
@@ -219,22 +219,22 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">03/11/2018</td>
+<td class="front_matter_column3">15/03/2019</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">13:50:08</td>
+<td class="front_matter_column3">07:15:21</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">00:00:00</td>
+<td class="front_matter_column3">00:00:01</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3"><a href="file:///C:\Users\Ef%C3%ADsio\Desktop\Neto\VSS-Eletronic-Boards\LTM-2405.PcbDoc" class="file"><acronym title="C:\Users\Efísio\Desktop\Neto\VSS-Eletronic-Boards\LTM-2405.PcbDoc">C:\Users\Efísio\Desktop\Neto\VSS-Eletronic-Boards\LTM-2405.PcbDoc</acronym></a></td>
+<td class="front_matter_column3"><a href="file:///C:\Users\OniasC\Desktop\ROBOIME\Eletr%C3%B4nica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc" class="file"><acronym title="C:\Users\OniasC\Desktop\ROBOIME\Eletrônica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc">C:\Users\OniasC\Desktop\ROBOIME\Eletrônica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc</acronym></a></td>
 </tr>
 </table>
 </td>
@@ -247,10 +247,10 @@
 <tr>
 <td class="DRC_summary_header_col1">Rule Violations:</td>
 <td class="DRC_summary_header_col2"></td>
-<td class="DRC_summary_header_col3">0</td></tr>
+<td class="DRC_summary_header_col3" style="color : red">2</td></tr>
 </table>
 </td>
-</table><a name="IDS4PTFOZAPLJRNEH1COZVPCCBGP3GDJ0XWJMM1GBDWBQPBI14XTZM"><h2>Summary</h2></a><table>
+</table><a name="IDD5MPGVCPQ5TOPV2PJLWJBT2VKKVHLAGFMUUEXNI5YDPKX5W3NBLH"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,76 +265,86 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDGYWWIT34T0PJJIR0QBZPLX4QL5P44DDDLO5E0C0OG1BEQ4SA32J">Clearance Constraint (Gap=0.1mm) (OnLayer('Top Layer')),(InComponent('ExPo1'))</a></td>
+<td class="column1"><a href="#ID0BHDEEXT1QYTPO4CDHBCRWXS3OWEPHKM2ASWWENMAZEA0DACX1LO">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('ExPo1'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDYCIIBBTUNT3DKFE2NLNWAKD5UIT0P04UJ4SJUSPF22YJOMOCY4UE">Clearance Constraint (Gap=0.4mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDFC3VGXTKKDASN2SPOBMXFGJDNJIQFPOTMWY5WWN3GY0RALK5NIRC">Clearance Constraint (Gap=0.4mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDM1P30PBUFLZQCTSCTFUBEMUW5MZ4KGW5OFKFDJ212UE4JPM0NXI">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('MPU1'))</a></td>
+<td class="column1"><a href="#IDN23HW1SRGHKSOYPG4WSDX2WVF25DCDE2X1BI0RCRASDRB32XRI">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('MPU1'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDNVXPXZCZLCF3ILY5DC5RJ12QBJWYUUEURAEFHFMPYAJTLMCOFWLP">Clearance Constraint (Gap=0.08mm) (OnLayer('Top Layer')),(InComponent('R65'))</a></td>
+<td class="column1"><a href="#IDNGP2EABAN3PDKBI5PBMOVELEKOKPNRWCPLWAG1PULV1VIHQZMHEI">Clearance Constraint (Gap=0mm) (InNet('VBAT')),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID32MELE0EF5V4BRDH0UEKLHURNF35QUNS4OO4E4KAVDII1QD1W1HE">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InNet('GND'))</a></td>
+<td class="column1"><a href="#IDCYVHAJUVKS5JB3MOY2IHFPCDXDOLQO3T5ZZ4VOCPROJSCHIZVVZI">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDVYUBNMGPPWGBD2BT1RZQLVNDBO4FTLGPYLQURJOL0QHIGADEDH3O">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDCGFMI3F1Q5SFJHCIAPC313EQUJFZAGG0MYFSDPHG3R10GRQGKALD">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDT1SLBKNGDIQSPYRLWSPP4I4OMGSBS5QRGZAHIRB1SF4MOKCZWIHM">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDIQESZB5B20TINNMIU5G0E3SCFYVMCHVIHFTUC2YYHALT2PG4BD">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDY5UFP4K1BM1PJALSZXKY2F0EOGF3JN0IWWADZGI0TAEH5JUVLMZB">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#ID45HLFMARKO2HMTQLPZFY5PAXCO0B34MQGFQHXGD0PL5YKTZUSWQF">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDKOHKB5APMWAVDMYNEUEFW35FKJD5NB1GDLRJNJCTLHPYSIETRM5K">Width Constraint (Min=0.2mm) (Max=1mm) (Preferred=0.3mm) (All)</a></td>
+<td class="column1"><a href="#IDH2LWO0OYA4VRHHUOUNX00FUU0GPXQJVISCAEG2MFENK0Q4ZZUVY">Width Constraint (Min=0.2mm) (Max=1mm) (Preferred=0.3mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID25QDMFHLQBFENBFD0CQVYVIGENXX5AB3PAUNHXME5FMMOWFOS3YN">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#ID14FNSPHJWEWFFSYZU2Y4Z3P15JOWNFZKZBTHNCN2G3JV0IEKXPGC">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDI04AKPXKQEEWGT3BQBU5M5RQCKV3J11ODEV52VIHMV0Y0MFTB4YC">Hole Size Constraint (Min=0.025mm) (Max=10mm) (All)</a></td>
+<td class="column1"><a href="#IDARMAH2KG1HIUNYV4H5BXH24A0HTABJLF1KGIDJJ2JSVKWN2DAFMC">Hole Size Constraint (Min=0.025mm) (Max=10mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDHX1SO501HSRNF2PYNJT3PDJ41MRLZAM3GLFBZ1LF1E5YIAQNV2NF">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDTBTDNCYTBZW3I5VZE4RAZDQYCCA0UTLATAXBSIJLA0CELBLIEBFH">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDZIRQBXX0KSDSP0VCCIQXM1PVVELEIWVL4SLYEPO4YKS1JXFSNU1C">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
+<td class="column1"><a href="#ID41ENS3KPPAGZBUQS10QVACL0ZENJEIN44EXRVY0ORG10LENJPHG">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDWGUYXEQTXHSCGWMJ4ZHAANJU4ED5GZY150PLYIWHBX0OHPLSHWC">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
+<td class="column1"><a href="#IDKXZBRWWSKF1KDUT0R5ZYC3ONVD3T2UQR02K5LCNBREALXQQMLYOH">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDM5SXZFE2O3IAFX1UZMXSZOT1WPJQMOH3VHEFWRK5SGN4KN3HFJQK">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
-<td class="column2">0</td>
+<td class="column1"><a href="#IDQADOLPI3XYTVKMCJTHHQFHK4NBK1WWNW1L1LYKCEVXJNXRD2EJYE">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column2">2</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDCFO1VC3KEKGXN1SIXQHAZYVWPCMK5ZGAYX4HYFIAC4NKIBSOEXAF">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDCW5N4T1GN31SJC02FIVKETSNBSN4RAYX1ARL1K35ZIL5HJS4QEM">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDBUGXGQEUHACSBON12JLCWPIOPJQZ2BEDE4B353GYLNN2IZ0VQOMP">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDOL0Q5JBT3WRDL4ZRI1BZDGUFAM10HU2BW230LSJI4U1VIGUFCP1D">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
-<td style="font-weight : bold" class="column2">0</td>
+<td style="font-weight : bold" class="column2">2</td>
 </tr>
-</table><br></body>
+</table><br><a name="IDQADOLPI3XYTVKMCJTHHQFHK4NBK1WWNW1L1LYKCEVXJNXRD2EJYE"><table>
+<tr>
+<th style="text-align : left" colspan="1" class="rule">Silk to Silk (Clearance=0.254mm) (All),(All)</th>
+</tr>
+<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\OniasC\Desktop\ROBOIME\Eletr%C3%B4nica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3215.193mil|Location2.X=3226.443mil|Location1.Y=3003.002mil|Location2.Y=3016.516mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\OniasC\Desktop\ROBOIME\Eletrônica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3215.193mil|Location2.X=3226.443mil|Location1.Y=3003.002mil|Location2.Y=3016.516mil|Absolute=True">Silk To Silk Clearance Constraint: (0.136mm &lt; 0.254mm) Between Arc (13.1mm,20.95mm) on Bottom Overlay And Text "100K" (12.975mm,21.076mm) on Bottom Overlay Silk Text to Silk Clearance [0.136mm]</acronym></a><br></td>
+</tr>
+<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\OniasC\Desktop\ROBOIME\Eletr%C3%B4nica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3171.021mil|Location2.X=3182.271mil|Location1.Y=3032.342mil|Location2.Y=3043.592mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\OniasC\Desktop\ROBOIME\Eletrônica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3171.021mil|Location2.X=3182.271mil|Location1.Y=3032.342mil|Location2.Y=3043.592mil|Absolute=True">Silk To Silk Clearance Constraint: (0.248mm &lt; 0.254mm) Between Text "100K" (12.975mm,21.076mm) on Bottom Overlay And Text "INA169NA" (16.628mm,21.924mm) on Bottom Overlay Silk Text to Silk Clearance [0.248mm]</acronym></a><br></td>
+</tr>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br></body>
 </html>
