--- a/Project Outputs for LTM-2405/Design Rule Check - LTM-2405.html
+++ b/Project Outputs for LTM-2405/Design Rule Check - LTM-2405.html
@@ -211,7 +211,7 @@
 	</script><title>Design Rule Verification Report</title>
 </head>
 <body onload=""><img ALT="Altium" src="
-			file://C:\Users\Public\Documents\Altium\NEXUS\Templates\AD_logo.png
+			file://C:\Users\Public\Documents\Altium\AD18\Templates\AD_logo.png
 		"><h1>Design Rule Verification Report</h1>
 <table class="header_holder">
 <td class="column1">
@@ -224,17 +224,17 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">07:15:21</td>
+<td class="front_matter_column3">11:13:36</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">00:00:01</td>
+<td class="front_matter_column3">00:00:00</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3"><a href="file:///C:\Users\OniasC\Desktop\ROBOIME\Eletr%C3%B4nica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc" class="file"><acronym title="C:\Users\OniasC\Desktop\ROBOIME\Eletrônica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc">C:\Users\OniasC\Desktop\ROBOIME\Eletrônica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc</acronym></a></td>
+<td class="front_matter_column3"><a href="file:///C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc" class="file"><acronym title="C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc">C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc</acronym></a></td>
 </tr>
 </table>
 </td>
@@ -247,10 +247,10 @@
 <tr>
 <td class="DRC_summary_header_col1">Rule Violations:</td>
 <td class="DRC_summary_header_col2"></td>
-<td class="DRC_summary_header_col3" style="color : red">2</td></tr>
+<td class="DRC_summary_header_col3" style="color : red">3</td></tr>
 </table>
 </td>
-</table><a name="IDD5MPGVCPQ5TOPV2PJLWJBT2VKKVHLAGFMUUEXNI5YDPKX5W3NBLH"><h2>Summary</h2></a><table>
+</table><a name="IDRGJTNEEVYJYUJT4OY4AZUW2TKPZ3TPE3NZAXKVC3U12ASMXIDQBJ"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,86 +265,101 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID0BHDEEXT1QYTPO4CDHBCRWXS3OWEPHKM2ASWWENMAZEA0DACX1LO">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('ExPo1'))</a></td>
+<td class="column1"><a href="#IDHAP1PP2X0FBLI3G0XDKXXE5AQOAMKRK42A2IENCOF4LI0JDXOKDE">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('MPU1'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDFC3VGXTKKDASN2SPOBMXFGJDNJIQFPOTMWY5WWN3GY0RALK5NIRC">Clearance Constraint (Gap=0.4mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDDRBRPWAVAEPOJXBWRSHT3PBZBHAAJF5G52TL3H40MWXF5T2U0LN">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('ExPo1'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDN23HW1SRGHKSOYPG4WSDX2WVF25DCDE2X1BI0RCRASDRB32XRI">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('MPU1'))</a></td>
+<td class="column1"><a href="#ID4BCO4JXV23VLGJ15BVIXNWW33H1IB3KUV50NRKH3ENXTUKC0IPGP">Clearance Constraint (Gap=0.4mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDNGP2EABAN3PDKBI5PBMOVELEKOKPNRWCPLWAG1PULV1VIHQZMHEI">Clearance Constraint (Gap=0mm) (InNet('VBAT')),(InNet('GND'))</a></td>
+<td class="column1"><a href="#IDFKEWK2QSFRNRHZGOZXB4JK0UXDAZTKV5QVIQF2GOGT0W2L1NELPH">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDCYVHAJUVKS5JB3MOY2IHFPCDXDOLQO3T5ZZ4VOCPROJSCHIZVVZI">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InNet('GND'))</a></td>
+<td class="column1"><a href="#IDOKL3ING0NZZHCU5CQCAL13G5KPUXIIPKO5NWGJBKO4HHDR2HLPSE">Clearance Constraint (Gap=0mm) ((InNet('VCC') AND InNamedPolygon('REG-VCC'))),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDCGFMI3F1Q5SFJHCIAPC313EQUJFZAGG0MYFSDPHG3R10GRQGKALD">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDIGUCW5ZFMBBUO3JZIVT25VELEKI05ZRQQBZTCUMDK2GQVCZE4WZF">Clearance Constraint (Gap=0mm) (InNet('Q1_Vin')),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDIQESZB5B20TINNMIU5G0E3SCFYVMCHVIHFTUC2YYHALT2PG4BD">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#ID1F1EQBGHMTKRDF5KMERBUTS4NNZMCJQFCXCY2N0FFJSPJ0ILUDL">Clearance Constraint (Gap=0mm) (InNet('VBAT')),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID45HLFMARKO2HMTQLPZFY5PAXCO0B34MQGFQHXGD0PL5YKTZUSWQF">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
-<td class="column2">0</td>
+<td class="column1"><a href="#IDEFNCCMWSQNHCCM3BADRXFHAMSN45ELWF3PRX4CLR5LNWUVBPKWAB">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column2">1</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDH2LWO0OYA4VRHHUOUNX00FUU0GPXQJVISCAEG2MFENK0Q4ZZUVY">Width Constraint (Min=0.2mm) (Max=1mm) (Preferred=0.3mm) (All)</a></td>
+<td class="column1"><a href="#IDJNZ5VSCZAZTDDYUKPQHCHAVQI0C1PQUCIBCV1KI1QKLKWNEFFKD">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID14FNSPHJWEWFFSYZU2Y4Z3P15JOWNFZKZBTHNCN2G3JV0IEKXPGC">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDZWJCYEY2I0PBA5XUMUBWZSMJGXCVD0WPQKTACLHTH25BTAUBSXD">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDARMAH2KG1HIUNYV4H5BXH24A0HTABJLF1KGIDJJ2JSVKWN2DAFMC">Hole Size Constraint (Min=0.025mm) (Max=10mm) (All)</a></td>
+<td class="column1"><a href="#IDVP3RS0ZGYDDRGXG23Y1BWENXMB3CIGSJIFLAFSJATAKBP1ZE4K4K">Width Constraint (Min=0.2mm) (Max=1mm) (Preferred=0.3mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDTBTDNCYTBZW3I5VZE4RAZDQYCCA0UTLATAXBSIJLA0CELBLIEBFH">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDDUJRA5DFONXLKBQYV2FJHMNJAKEPJIQBTD2TMJLEE4S55MGT22LN">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID41ENS3KPPAGZBUQS10QVACL0ZENJEIN44EXRVY0ORG10LENJPHG">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
+<td class="column1"><a href="#IDVRCSMWZ12NQUP2LD1ZMK1XYBSJULQNLRAK3WYPMMM1XOXFT22GDK">Hole Size Constraint (Min=0.025mm) (Max=10mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDKXZBRWWSKF1KDUT0R5ZYC3ONVD3T2UQR02K5LCNBREALXQQMLYOH">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
+<td class="column1"><a href="#IDF0CMRK0BLC0SE024T3BCLXWCKFY4TLIDDHZSUXPWN50IG0HODK3P">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDQADOLPI3XYTVKMCJTHHQFHK4NBK1WWNW1L1LYKCEVXJNXRD2EJYE">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDXLYYBYOPYY0LK5CPVCVZHFH3JXYQK13APW4UYDFKV1PKUNF41QO">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
+<td class="column2">0</td>
+</tr>
+<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+<td class="column1"><a href="#IDAMYZ225LLYEGCAMJHVJ23M1PTDPWXDZO14JNMBEJSCNECIBD4JV">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
+<td class="column2">0</td>
+</tr>
+<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
+<td class="column1"><a href="#IDGT0YNHY3LLTAK0KZ4PNL3FE1GJFNFH50E0LGQRM5EIRBCBA5N2EB">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
 <td class="column2">2</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDCW5N4T1GN31SJC02FIVKETSNBSN4RAYX1ARL1K35ZIL5HJS4QEM">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDLRJWNINJKWXVKQJWD0GGXQBYZOJYTGF44E5JRXM3LVNOQFDPHYCH">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOL0Q5JBT3WRDL4ZRI1BZDGUFAM10HU2BW230LSJI4U1VIGUFCP1D">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#ID50DVSN41HUNWBDC14XJ5VEZYZFSQYIFEKVJBBZBOIWP21O1QNUTO">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
-<td style="font-weight : bold" class="column2">2</td>
+<td style="font-weight : bold" class="column2">3</td>
 </tr>
-</table><br><a name="IDQADOLPI3XYTVKMCJTHHQFHK4NBK1WWNW1L1LYKCEVXJNXRD2EJYE"><table>
+</table><br><a name="IDEFNCCMWSQNHCCM3BADRXFHAMSN45ELWF3PRX4CLR5LNWUVBPKWAB"><table>
+<tr>
+<th style="text-align : left" colspan="1" class="rule">Short-Circuit Constraint (Allowed=No) (All),(All)</th>
+</tr>
+<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=125795.18mil|Location2.X=-125795.18mil|Location1.Y=125795.18mil|Location2.Y=-125795.18mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=125795.18mil|Location2.X=-125795.18mil|Location1.Y=125795.18mil|Location2.Y=-125795.18mil|Absolute=True">Short-Circuit Constraint: Between Pad Free-2(11.831mm,40.85mm) on Multi-Layer And Polygon Region (10 hole(s)) Top Layer Location : [X = 0mm][Y = 0mm]</acronym></a><br></td>
+</tr>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDGT0YNHY3LLTAK0KZ4PNL3FE1GJFNFH50E0LGQRM5EIRBCBA5N2EB"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="rule">Silk to Silk (Clearance=0.254mm) (All),(All)</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\OniasC\Desktop\ROBOIME\Eletr%C3%B4nica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3215.193mil|Location2.X=3226.443mil|Location1.Y=3003.002mil|Location2.Y=3016.516mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\OniasC\Desktop\ROBOIME\Eletrônica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3215.193mil|Location2.X=3226.443mil|Location1.Y=3003.002mil|Location2.Y=3016.516mil|Absolute=True">Silk To Silk Clearance Constraint: (0.136mm &lt; 0.254mm) Between Arc (13.1mm,20.95mm) on Bottom Overlay And Text "100K" (12.975mm,21.076mm) on Bottom Overlay Silk Text to Silk Clearance [0.136mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3215.193mil|Location2.X=3226.443mil|Location1.Y=3003.002mil|Location2.Y=3016.516mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3215.193mil|Location2.X=3226.443mil|Location1.Y=3003.002mil|Location2.Y=3016.516mil|Absolute=True">Silk To Silk Clearance Constraint: (0.136mm &lt; 0.254mm) Between Arc (13.1mm,20.95mm) on Bottom Overlay And Text "100K" (12.975mm,21.076mm) on Bottom Overlay Silk Text to Silk Clearance [0.136mm]</acronym></a><br></td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\OniasC\Desktop\ROBOIME\Eletr%C3%B4nica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3171.021mil|Location2.X=3182.271mil|Location1.Y=3032.342mil|Location2.Y=3043.592mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\OniasC\Desktop\ROBOIME\Eletrônica\placa_vss\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3171.021mil|Location2.X=3182.271mil|Location1.Y=3032.342mil|Location2.Y=3043.592mil|Absolute=True">Silk To Silk Clearance Constraint: (0.248mm &lt; 0.254mm) Between Text "100K" (12.975mm,21.076mm) on Bottom Overlay And Text "INA169NA" (16.628mm,21.924mm) on Bottom Overlay Silk Text to Silk Clearance [0.248mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3171.021mil|Location2.X=3182.271mil|Location1.Y=3032.342mil|Location2.Y=3043.592mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3171.021mil|Location2.X=3182.271mil|Location1.Y=3032.342mil|Location2.Y=3043.592mil|Absolute=True">Silk To Silk Clearance Constraint: (0.248mm &lt; 0.254mm) Between Text "100K" (12.975mm,21.076mm) on Bottom Overlay And Text "INA169NA" (16.628mm,21.924mm) on Bottom Overlay Silk Text to Silk Clearance [0.248mm]</acronym></a><br></td>
 </tr>
 </table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br></body>
 </html>
