stitches, gnd do expansor e correção dos erros de regras

--- a/Project Outputs for LTM-2405/Design Rule Check - LTM-2405.html
+++ b/Project Outputs for LTM-2405/Design Rule Check - LTM-2405.html
@@ -219,12 +219,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">15/03/2019</td>
+<td class="front_matter_column3">23/03/2019</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">11:13:36</td>
+<td class="front_matter_column3">13:12:43</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3" style="color : red">3</td></tr>
 </table>
 </td>
-</table><a name="IDRGJTNEEVYJYUJT4OY4AZUW2TKPZ3TPE3NZAXKVC3U12ASMXIDQBJ"><h2>Summary</h2></a><table>
+</table><a name="IDL0MOYQKFFTO2OIBDIJ1MNDGMKL2MLXRA4C2VS5EZ0QXES4LCHO1"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,93 +265,93 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDHAP1PP2X0FBLI3G0XDKXXE5AQOAMKRK42A2IENCOF4LI0JDXOKDE">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('MPU1'))</a></td>
+<td class="column1"><a href="#IDLGXHMBRXKV40LPN2DXQE20UB0CD5H1MN5M5EBVGR4NHSZ2D5NA0">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('MPU1'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDDRBRPWAVAEPOJXBWRSHT3PBZBHAAJF5G52TL3H40MWXF5T2U0LN">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('ExPo1'))</a></td>
+<td class="column1"><a href="#IDMABHKGLIUSRTMXO1W4DY54PY0M5WT5XAEJ4ZDULK1XFEL3XTCK4D">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InComponent('ExPo1'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID4BCO4JXV23VLGJ15BVIXNWW33H1IB3KUV50NRKH3ENXTUKC0IPGP">Clearance Constraint (Gap=0.4mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDSQXKCQOVRCD5IHXCEKCDOHSP1OOJURS2PM0KN3CXYYYTJOMEZRDP">Clearance Constraint (Gap=0.4mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDFKEWK2QSFRNRHZGOZXB4JK0UXDAZTKV5QVIQF2GOGT0W2L1NELPH">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InNet('GND'))</a></td>
+<td class="column1"><a href="#ID5DER1VZ2TUEUBBXTNIOP3EJXPMYAT0MOO0DPSCZJY2NLSWITWMI">Clearance Constraint (Gap=0.1mm) (OnLayer('Bottom Layer')),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOKL3ING0NZZHCU5CQCAL13G5KPUXIIPKO5NWGJBKO4HHDR2HLPSE">Clearance Constraint (Gap=0mm) ((InNet('VCC') AND InNamedPolygon('REG-VCC'))),(InNet('GND'))</a></td>
+<td class="column1"><a href="#ID540BXKL32KMTMBRRKBHTATYN3EZ1UV1JZZEH1BI2BAW3BWROIFJ">Clearance Constraint (Gap=0mm) ((InNet('VBAT') OR InNet('VIN-1') OR InNet('VIN-2') OR InNet('netfM1_2') OR InNet('NetFM2_2'))),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDIGUCW5ZFMBBUO3JZIVT25VELEKI05ZRQQBZTCUMDK2GQVCZE4WZF">Clearance Constraint (Gap=0mm) (InNet('Q1_Vin')),(InNet('GND'))</a></td>
+<td class="column1"><a href="#IDZINCF1RP2E4HKMEGCCKE3ARKZCUAGJOC4BUEF5MUXUL5FXHI4VL">Clearance Constraint (Gap=0mm) ((InNet('VCC') AND InNamedPolygon('REG-VCC'))),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID1F1EQBGHMTKRDF5KMERBUTS4NNZMCJQFCXCY2N0FFJSPJ0ILUDL">Clearance Constraint (Gap=0mm) (InNet('VBAT')),(InNet('GND'))</a></td>
+<td class="column1"><a href="#IDDZ4VYLFCDT5SNZXLAGS0XT4ZVEDYOQJIUH5ASVM4ETWL14QE53XG">Clearance Constraint (Gap=0mm) (InNet('Q1_Vin')),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDEFNCCMWSQNHCCM3BADRXFHAMSN45ELWF3PRX4CLR5LNWUVBPKWAB">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#ID5Z1GLNEVBEBKDZULIADHBVJENKSEDUWFYPXGFLGIPMPZ5AEYP55">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">1</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJNZ5VSCZAZTDDYUKPQHCHAVQI0C1PQUCIBCV1KI1QKLKWNEFFKD">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#ID4FZF11UBUBFQK3VSZ5FC5OWZ2MZ0VPQCT3Z2WSGDOZNXQ4OOTXXP">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDZWJCYEY2I0PBA5XUMUBWZSMJGXCVD0WPQKTACLHTH25BTAUBSXD">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#ID2A40HB0GM2FUIXL22CK002PKYHMIQFAKK1EV2EHHF1PUX2LY3ZGH">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDVP3RS0ZGYDDRGXG23Y1BWENXMB3CIGSJIFLAFSJATAKBP1ZE4K4K">Width Constraint (Min=0.2mm) (Max=1mm) (Preferred=0.3mm) (All)</a></td>
+<td class="column1"><a href="#ID4ZGUZYJT2XOFLQB2HEGMOP3M1DFTSCGKIL2SBZPHGPOYCU3N20VP">Width Constraint (Min=0.2mm) (Max=1mm) (Preferred=0.3mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDDUJRA5DFONXLKBQYV2FJHMNJAKEPJIQBTD2TMJLEE4S55MGT22LN">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#ID0MBSXN5UKMZBK1QR0MHRMJH5QNTABW5AW2OZJHLPVSA43ESCLTEJ">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDVRCSMWZ12NQUP2LD1ZMK1XYBSJULQNLRAK3WYPMMM1XOXFT22GDK">Hole Size Constraint (Min=0.025mm) (Max=10mm) (All)</a></td>
+<td class="column1"><a href="#IDIPAAUGAROMYPCM0RYYFWHS1PPI5WZDXHIN0Z3TH52PJGDV2QSITH">Hole Size Constraint (Min=0.025mm) (Max=10mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDF0CMRK0BLC0SE024T3BCLXWCKFY4TLIDDHZSUXPWN50IG0HODK3P">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDTPPBA2ETGGRPHDNSATH4BJMQDMMRS4IOBXE4LRNHQTFPJQOA4EWN">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDXLYYBYOPYY0LK5CPVCVZHFH3JXYQK13APW4UYDFKV1PKUNF41QO">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
+<td class="column1"><a href="#IDS5ADNNWGH0CEMPX4JN41TT11PFU5T52UBRYTIAFWQF12H2W4NEO">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAMYZ225LLYEGCAMJHVJ23M1PTDPWXDZO14JNMBEJSCNECIBD4JV">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
+<td class="column1"><a href="#IDXAU4Q43UACNEE4ZLVMMMKDZQ2OJKZYNKDRFGDZE1IOUGJKL5ACGD">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDGT0YNHY3LLTAK0KZ4PNL3FE1GJFNFH50E0LGQRM5EIRBCBA5N2EB">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDVCG5KPG01P5CD4XKMTV4CYPFZDU2PMZZJW1FC1CGXHVS102ZUHE">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
 <td class="column2">2</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDLRJWNINJKWXVKQJWD0GGXQBYZOJYTGF44E5JRXM3LVNOQFDPHYCH">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDWDVGZ0PZSMGSJKUOUUAL4ZOV2IFIXYGEL12ZWDDKYGSXNNC115TC">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID50DVSN41HUNWBDC14XJ5VEZYZFSQYIFEKVJBBZBOIWP21O1QNUTO">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#ID34DWRMQCZ44WFHNHGLXKP00TAEFXB5T4TBE1ESKIT3VB3GZEDLH">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
 <td style="font-weight : bold" class="column2">3</td>
 </tr>
-</table><br><a name="IDEFNCCMWSQNHCCM3BADRXFHAMSN45ELWF3PRX4CLR5LNWUVBPKWAB"><table>
+</table><br><a name="ID5Z1GLNEVBEBKDZULIADHBVJENKSEDUWFYPXGFLGIPMPZ5AEYP55"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="rule">Short-Circuit Constraint (Allowed=No) (All),(All)</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=125795.18mil|Location2.X=-125795.18mil|Location1.Y=125795.18mil|Location2.Y=-125795.18mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=125795.18mil|Location2.X=-125795.18mil|Location1.Y=125795.18mil|Location2.Y=-125795.18mil|Absolute=True">Short-Circuit Constraint: Between Pad Free-2(11.831mm,40.85mm) on Multi-Layer And Polygon Region (10 hole(s)) Top Layer Location : [X = 0mm][Y = 0mm]</acronym></a><br></td>
+<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=125795.18mil|Location2.X=-125795.18mil|Location1.Y=125795.18mil|Location2.Y=-125795.18mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=125795.18mil|Location2.X=-125795.18mil|Location1.Y=125795.18mil|Location2.Y=-125795.18mil|Absolute=True">Short-Circuit Constraint: Between Pad Free-2(11.831mm,40.85mm) on Multi-Layer And Polygon Region (15 hole(s)) Top Layer Location : [X = 0mm][Y = 0mm]</acronym></a><br></td>
 </tr>
-</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDGT0YNHY3LLTAK0KZ4PNL3FE1GJFNFH50E0LGQRM5EIRBCBA5N2EB"><table>
+</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br><a name="IDVCG5KPG01P5CD4XKMTV4CYPFZDU2PMZZJW1FC1CGXHVS102ZUHE"><table>
 <tr>
 <th style="text-align : left" colspan="1" class="rule">Silk to Silk (Clearance=0.254mm) (All),(All)</th>
 </tr>
