pinos SCL e SDA no modelo pcb conectados corretamente

--- a/Project Outputs for LTM-2405/Design Rule Check - LTM-2405.html
+++ b/Project Outputs for LTM-2405/Design Rule Check - LTM-2405.html
@@ -211,7 +211,7 @@
 	</script><title>Design Rule Verification Report</title>
 </head>
 <body onload=""><img ALT="Altium" src="
-			file://C:\Users\Public\Documents\Altium\AD18\Templates\AD_logo.png
+			file://C:\Users\Public\Documents\Altium\AD21\Templates\AD_logo.png
 		"><h1>Design Rule Verification Report</h1>
 <table class="header_holder">
 <td class="column1">
@@ -219,22 +219,22 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">22/08/2019</td>
+<td class="front_matter_column3">20/04/2021</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">12:53:15</td>
+<td class="front_matter_column3">21:56:44</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">00:00:00</td>
+<td class="front_matter_column3">00:00:01</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3"><a href="file:///C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc" class="file"><acronym title="C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc">C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc</acronym></a></td>
+<td class="front_matter_column3"><a href="file:///C:\Users\nicol\Documents\ROBOIME\VSS\projeto da placa\VSS-Eletronic-Boards\LTM-2405.PcbDoc" class="file"><acronym title="C:\Users\nicol\Documents\ROBOIME\VSS\projeto da placa\VSS-Eletronic-Boards\LTM-2405.PcbDoc">C:\Users\nicol\Documents\ROBOIME\VSS\projeto da placa\VSS-Eletronic-Boards\LTM-2405.PcbDoc</acronym></a></td>
 </tr>
 </table>
 </td>
@@ -247,10 +247,10 @@
 <tr>
 <td class="DRC_summary_header_col1">Rule Violations:</td>
 <td class="DRC_summary_header_col2"></td>
-<td class="DRC_summary_header_col3" style="color : red">2</td></tr>
+<td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDVAQZVYWXD1WD1VVQHNJAB1K2PAOXDCT0AJLCLFFKQGEA3UFFXKN"><h2>Summary</h2></a><table>
+</table><a name="IDGGFRZ3MESDLTDILPNOUVZ2KY3PIMUAG42UXW05NXYOGBGDLQI4SE"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,90 +265,80 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDFIRUYLGLTJEAHSIEPCB3INUQSNUSDGONJ0DG25PLV5Z1RTCZQX1P">Clearance Constraint (Gap=0.2mm) (OnLayer('Bottom Layer')),(InComponent('MPU1'))</a></td>
+<td class="column1"><a href="#IDUVUKMFIAOKM2KJCJP40B3RUILFSIWVRBTNYP0CY20QR0FQPQW1C">Clearance Constraint (Gap=0.2mm) (OnLayer('Bottom Layer')),(InComponent('MPU1'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDNB0YDYLO4C40DD5OSUF2XDOQ1HS4KIYEXMAY5ULYUVFG2TXFROTJ">Clearance Constraint (Gap=0.2mm) (OnLayer('Bottom Layer')),(InComponent('ExPo1'))</a></td>
+<td class="column1"><a href="#ID10W3BY2QW0MDIG3YQRH5JDOPBHH15TQFAKXS2LJRNWXAWUJAFFDN">Clearance Constraint (Gap=0.2mm) (OnLayer('Bottom Layer')),(InComponent('ExPo1'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDTQEEB1EO0JP0FDDKOATXVBKWCI1LM01PAC32CENWM2UTCVDCQ3HD">Clearance Constraint (Gap=0.2mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDK4NATFZ1KCLBNOGYCAXXZUHBSKT3LCTV1GMA3TLHTUEPQPN3J0QC">Clearance Constraint (Gap=0.2mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDQ3XBNKQA5T1JDOWMDCHBMTGUMEOTKSY4XBZPXZMYP1ZB0PDRPNZG">Clearance Constraint (Gap=0mm) ((InNet('VBAT') OR InNet('VIN-1') OR InNet('VIN-2') OR InNet('netfM1_2') OR InNet('NetFM2_2'))),(InNet('GND'))</a></td>
+<td class="column1"><a href="#IDQ5ULP4OJVX30KO3OLAIQFJQM2IXCDMZYICKUAZCHOSXTVEVTGYTP">Clearance Constraint (Gap=0mm) ((InNet('VBAT') OR InNet('VIN-1') OR InNet('VIN-2') OR InNet('netfM1_2') OR InNet('NetFM2_2'))),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDRZ2ZI1YZR0WGLKOD2OGR0KH2IKKTV5LKTT3HYLJCLKP4RZJKKVCN">Clearance Constraint (Gap=0mm) ((InNet('VCC') AND InNamedPolygon('REG-VCC'))),(InNet('GND'))</a></td>
+<td class="column1"><a href="#IDKIPSDHPTKDASN3LKTE1L5D2LOOMOLDZM5ODT0GE1R4Q1VKG0HH0G">Clearance Constraint (Gap=0mm) ((InNet('VCC') AND InNamedPolygon('REG-VCC'))),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDYURVJ1CN452GEGGGP5T23ZIQAKZJICS1XCTJVZILOIRABF0LSKEI">Clearance Constraint (Gap=0mm) (InNet('Q1_Vin')),(InNet('GND'))</a></td>
+<td class="column1"><a href="#IDCOSHNIZDQDEHJYNUVILMATZ04D2S2XTEYZIDBVEYQHS0H3KPJFJC">Clearance Constraint (Gap=0mm) (InNet('Q1_Vin')),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDEHDIUKP2HOD4LIY5QR4TRYCQJB2C0CWKUOT1Y2IASQTLNGLTGF3E">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDRPNELKV10JJWPQJBXLRJ3OCQ1G2BXS2LEOGNHSJD15Y3MYXSUFL">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDG0ZBDCXIO4OFPUFTG42LZWDKMG0T1A3M2FGYA5NGWL1SFTJUNMAG">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#ID1AMF4K2WAI4HMPZSKFRIOM33I04QNL5DYDWQUKENOVPKSX0RSFF">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOT2OU1JEJ353K3RJ5BWKQNMADDD5MQ3XKF3DWFF5CT4V2HEJ3ZDH">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDTAL3ZF4SSET3NAEF4LNGYX42UHD1UUANUAFNJYLEALYUMQUHJG3I">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDM4SSMEKZHZ1HEWI5K0Q531G00JUEIO5BAYVAX2MFO1KFWSQGF0UD">Width Constraint (Min=0.2mm) (Max=1mm) (Preferred=0.3mm) (All)</a></td>
+<td class="column1"><a href="#IDWL0ZOCUGIVA3ZYIWTPGNB1KSP1PZBOYZF5EN3GWWI531WEG22EI">Width Constraint (Min=0.2mm) (Max=1mm) (Preferred=0.3mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDP2VQZ0WOKBINNWFX5WA03GZKOFWPGZZ41KIXWDMYVWPTXKFPS5EH">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDHEDV5RL3BFU4EVMNZ3NX1MCFQLQXRJWN3TNNGRJPU314YUKRNC5K">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDHEU1GJV1VYNICMH5TQD3UJW0HOYEWFZT1S05KIJHOOMFUPMJ1LVN">Hole Size Constraint (Min=0.025mm) (Max=10mm) (All)</a></td>
+<td class="column1"><a href="#IDQJFELLCJ5JROELNNSGN1XBCX1OM144FQH105XRPMK2OLLHMZMVUM">Hole Size Constraint (Min=0.025mm) (Max=10mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID0MED4STSL2GHESBMQJHC3WKQDEECYDY0ITLHMXMDCT0LENZCRWJD">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID0TNUXGXS1FJ1FA4JXQQON11GFEK4SAY4CW2SQJFEDWGCUTYNBM4I">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDTREMJS4OXVCQPNZKHX215RJSONVF0CGYX3VQEUKCDSERSE0EQX0J">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
+<td class="column1"><a href="#IDCSY1NOEYE052FHIN3G22LVGJED555VZTO5V5CDEKSOLXHURQTKKJ">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAAFD1TK5JBJPL1IHOLGRO4BXMM5YXTAFNJUHOURVFQIOD31MGID">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
+<td class="column1"><a href="#IDFFY5AAZOHCLHB3JS21F1XLSKXFVIETL05DINDSGYGT4R2E52VTKE">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDOV41F0BZXULKDK3AINGHIVM42PXATB05I2FLPMBEBKF52TFUYJKP">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
-<td class="column2">2</td>
+<td class="column1"><a href="#IDZAELFIFX523CJSALK3S1TWZFKESNZVUR43HFDXHY0HL1BYST3EEK">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOHYZ5DURRGSFGJFKQ2CDW5REZD5BJHRX1O20JOCZKMXPW5Q2XC">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDZNNTGES10DDPFOZW1NXG1CYM4QVV4HQURXWBNE2CX2LBQSUFQCC">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDYQGOIAOKLUL0PTTGGTQFNYIAWGCG0PWSIZ43NMFRXM30OD1S2DQC">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDZOW01AANHJXVJQJ5RDX3SIUISGKQNN021LLFB0PEGNEKRYLHXLTO">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
-<td style="font-weight : bold" class="column2">2</td>
+<td style="font-weight : bold" class="column2">0</td>
 </tr>
-</table><br><a name="IDOV41F0BZXULKDK3AINGHIVM42PXATB05I2FLPMBEBKF52TFUYJKP"><table>
-<tr>
-<th style="text-align : left" colspan="1" class="rule">Silk to Silk (Clearance=0.254mm) (All),(All)</th>
-</tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3215.193mil|Location2.X=3226.443mil|Location1.Y=3003.002mil|Location2.Y=3016.516mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3215.193mil|Location2.X=3226.443mil|Location1.Y=3003.002mil|Location2.Y=3016.516mil|Absolute=True">Silk To Silk Clearance Constraint: (0.136mm &lt; 0.254mm) Between Arc (13.1mm,20.95mm) on Bottom Overlay And Text "100K" (12.975mm,21.076mm) on Bottom Overlay Silk Text to Silk Clearance [0.136mm]</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3171.021mil|Location2.X=3182.271mil|Location1.Y=3032.342mil|Location2.Y=3043.592mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\ytobm\Documents\VSS\Placa\2019a\VSS-Eletronic-Boards\LTM-2405.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=3171.021mil|Location2.X=3182.271mil|Location1.Y=3032.342mil|Location2.Y=3043.592mil|Absolute=True">Silk To Silk Clearance Constraint: (0.248mm &lt; 0.254mm) Between Text "100K" (12.975mm,21.076mm) on Bottom Overlay And Text "INA169NA" (16.628mm,21.924mm) on Bottom Overlay Silk Text to Silk Clearance [0.248mm]</acronym></a><br></td>
-</tr>
-</table></a><hr color="#EEEEEE"><a href="#top" style="font-size: 0.9em">Back to top</a><br><br></body>
+</table><br></body>
 </html>
